Mise à jour pages 1 et 2 et 4 - avec seeds

--- a/app/assets/stylesheets/components/_candidates.scss
+++ b/app/assets/stylesheets/components/_candidates.scss
@@ -17,6 +17,7 @@
     &:hover:not(.active) {
       background-color: rgba($modem-blue, 0.1);
       border-color: $modem-blue;
+      color: $modem-orange;
     }
   }
 }
