--- a/app/views/survey_responses/new.html.erb
+++ b/app/views/survey_responses/new.html.erb
@@ -31,7 +31,7 @@
         <div class="mb-5">
           <p class="lead">
             Nous souhaitons mieux vous connaître et formuler des propositions qui correspondent
-            au mieux à vos besoins. Pourriez-vous prendre <strong>10 minutes</strong> pour répondre
+            au mieux à vos besoins. Pourriez-vous prendre quelques minutes pour répondre
             à ce questionnaire ?
           </p>
           <p class="text-muted">
