--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -68,9 +68,9 @@
                     alt: "Communauté française à l'étranger",
                     class: "d-block w-100" %>
       <div class="carousel-caption">
-        <h1>Notre communauté</h1>
+        <h1>Notre environnement</h1>
         <p class="carousel-subtitle">
-          Des Français engagés au service des Français
+          Chaque jour, une invitation à la découverte
         </p>
       </div>
     </div>
@@ -246,7 +246,7 @@
             <!-- Signature avec photo de Pierre-Luc -->
             <div class="signature-with-photo">
               <div class="signature-photo">
-                <%= image_tag "team/pierre-luc-vervandier.jpg",
+                <%= image_tag "team/pierre-luc-vervandier1.jpg",
                               alt: "Pierre-Luc Vervandier en discussion",
                               class: "img-fluid rounded" %>
               </div>
